--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 </head>
 <body>
-<canvas id="gl" width="800" height="800"></canvas>
+<canvas id="2d" width="800" height="800" style="float:left;"></canvas>
+<canvas id="gl" width="800" height="800" style="float:left;"></canvas>
 <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
