adding ui stuff

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <body>
 <canvas id="2d" width="800" height="800" style="float:left;"></canvas>
 <canvas id="gl" width="800" height="800" style="float:left;"></canvas>
+<div id="ui">
+width<input id="widthUI" type="number" value="" />
+height<input id="heightUI" type="number" value="" />
+</div>
 <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
