added tooth connector starting UI

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <head>
 </head>
 <body>
-<canvas id="2d" width="800" height="800" style="float:left;"></canvas>
-<canvas id="gl" width="800" height="800" style="float:left;"></canvas>
+<div style="width:1620px;">
+<div style="">
+<canvas id="2d" width="0" height="0" style="float:left;"></canvas>
+<canvas id="gl" width="1600" height="800" style="float:left;"></canvas>
+<div>
+<div style="">
+<input id="width" type="range" min="375" max="3750" value="1200" />
+<div id="widthOut"></div>
+<input id="height" type="range" min="375" max="3750" value="1800" />
+<div id="heightOut"></div>
+</div>
+<div>
 <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
