updated code organization and style
created bookshelf.js
started adding function descriptions
changed sliders
started using gui.js

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <canvas id="gl" width="1600" height="800" style="float:left;"></canvas>
 <div>
 <div style="">
-<input id="width" type="range" min="375" max="3750" value="1200" />
+<input id="widthSlider" type="range" min="375" max="3750" value="1200" />
 <div id="widthOut"></div>
-<input id="height" type="range" min="375" max="3750" value="1800" />
+<input id="heightSlider" type="range" min="375" max="3750" value="1800" />
 <div id="heightOut"></div>
 </div>
 <div>
