--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <html>
 <head>
+	<title>organelle bookshelf</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div class="title">organelle</div>
+<div class="subtitle">a DIY bookshelf designed by nervous system + you</div>
 <div style="width:1620px;">
 <div style="">
 <canvas id="2d" width="0" height="0" style="float:left;"></canvas>
 <canvas id="gl" width="1600" height="800" style="float:left;"></canvas>
 <div>
-<div style="">
-<input id="widthSlider" type="range" min="375" max="3750" value="1200" />
-<div id="widthOut"></div>
-<input id="heightSlider" type="range" min="375" max="3750" value="1800" />
-<div id="heightOut"></div>
+<div class="shelfDataTable">
+<div class="shelfData">This bookshelf has <span id="cellsOut"></span> cells</div>
+<div class="shelfData">
+	<div class="dataTitle">width</div>
+	<div class="dataValue" id="widthOut"></div>
+	<input id="widthSlider"  class="slider" type="range" min="375" max="3750" value="1200" />
 </div>
-<div>
+<div class="shelfData">
+	<div class="dataTitle">height</div>
+	<div class="dataValue" id="heightOut"></div>
+	<input id="heightSlider"  class="slider" type="range" min="375" max="3750" value="1800" />
+</div>
+<div class="shelfData">
+	<div class="dataTitle">depth</div>
+	<div class="dataValue" id="depthOut"></div>
+	<input id="depthSlider" class="slider" type="range" min="70" max="600" value="254" />
+</div>
+
+</div>
+
+
+<div class="nervousLogo noSel">
+	<a href="http://n-e-r-v-o-u-s.com"><img src="images/nervousN.png"></a>
+	<div>a generator by <a href="http://n-e-r-v-o-u-s.com">nervous system</a><!--<br>&copy; 2013--></div>
+</div>
+
 <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
