dimensions > editable text boxes
still need to impose limits on values

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <div class="shelfData">This bookshelf has <span id="cellsOut"></span> cells</div>
 <div class="shelfData">
 	<div class="dataTitle">width</div>
-	<div class="dataValue" id="widthOut"></div>
+	<input class="dataValue editableVal" id="widthOut"/>
 	<input id="widthSlider"  class="slider" type="range" min="375" max="3750" value="1200" />
 </div>
 <div class="shelfData">
 	<div class="dataTitle">height</div>
-	<div class="dataValue" id="heightOut"></div>
+	<input class="dataValue editableVal" id="heightOut"/>
 	<input id="heightSlider"  class="slider" type="range" min="375" max="3750" value="1800" />
 </div>
 <div class="shelfData">
 	<div class="dataTitle">depth</div>
-	<div class="dataValue" id="depthOut"></div>
+	<input class="dataValue editableVal" id="depthOut"/>
 	<input id="depthSlider" class="slider" type="range" min="70" max="600" value="254" />
 </div>
 
