--- a/index.html
+++ b/index.html
@@ -13,26 +13,38 @@
 <canvas id="gl" width="1600" height="800" style="float:left;"></canvas>
 <div>
 <div class="shelfDataTable">
-<div class="shelfData">This bookshelf has <span id="cellsOut"></span> cells</div>
-<div class="shelfData">
-	<div class="dataTitle">width</div>
-	<input class="dataValue editableVal" id="widthOut"/>
-	<input id="widthSlider"  class="slider" type="range" min="375" max="3750" value="1200" />
+	<div class="shelfData">This bookshelf has <span id="cellsOut"></span> cells</div>
+	<div class="shelfData">
+		<div class="dataTitle">width</div>
+		<input class="dataValue editableVal" id="widthOut"/>
+		<input id="widthSlider"  class="slider" type="range" min="375" max="3750" value="1200" />
+	</div>
+	<div class="shelfData">
+		<div class="dataTitle">height</div>
+		<input class="dataValue editableVal" id="heightOut"/>
+		<input id="heightSlider"  class="slider" type="range" min="375" max="3750" value="1800" />
+	</div>
+	<div class="shelfData">
+		<div class="dataTitle">depth</div>
+		<input class="dataValue editableVal" id="depthOut"/>
+		<input id="depthSlider" class="slider" type="range" min="70" max="600" value="254" />
+	</div>
 </div>
-<div class="shelfData">
-	<div class="dataTitle">height</div>
-	<input class="dataValue editableVal" id="heightOut"/>
-	<input id="heightSlider"  class="slider" type="range" min="375" max="3750" value="1800" />
+<div class="purchase">
+	<div class="heading">purchase</div>
+	<div class="option">
+		<div class="optionTitle">plans <br>only</div>
+		<div class="optionTxt">make it yourself! 3d-printable files + instructions</div>
+	</div>
+	<div class="option">
+		<div class="optionTitle">connectors only</div>
+		<div class="optionTxt">connectors + instructions</div>
+	</div>
+	<div class="option">
+		<div class="optionTitle">complete bookshelf</div>
+		<div class="optionTxt">connectors + wood + instructions</div>
+	</div>
 </div>
-<div class="shelfData">
-	<div class="dataTitle">depth</div>
-	<input class="dataValue editableVal" id="depthOut"/>
-	<input id="depthSlider" class="slider" type="range" min="70" max="600" value="254" />
-</div>
-
-</div>
-
-
 <div class="nervousLogo noSel">
 	<a href="http://n-e-r-v-o-u-s.com"><img src="images/nervousN.png"></a>
 	<div>a generator by <a href="http://n-e-r-v-o-u-s.com">nervous system</a><!--<br>&copy; 2013--></div>
