--- a/index.html
+++ b/index.html
@@ -30,17 +30,21 @@
 		<input id="depthSlider" class="slider" type="range" min="70" max="600" value="254" />
 	</div>
 </div>
+<div id="colorSet"></div>
 <div class="purchase">
 	<div class="heading">purchase</div>
 	<div class="option">
+		<div class="optionPrice">$5</div>
 		<div class="optionTitle">plans <br>only</div>
 		<div class="optionTxt">make it yourself! 3d-printable files + instructions</div>
 	</div>
 	<div class="option">
+		<div class="optionPrice">$$</div>
 		<div class="optionTitle">connectors only</div>
 		<div class="optionTxt">connectors + instructions</div>
 	</div>
 	<div class="option">
+		<div class="optionPrice">$$$</div>
 		<div class="optionTitle">complete bookshelf</div>
 		<div class="optionTxt">connectors + wood + instructions</div>
 	</div>
