--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
 		<input class="dataValue editableVal" id="depthOut"/>
 		<input id="depthSlider" class="slider" type="range"  />
 	</div>
+	<div class="shelfData">
+		<div class="dataTitle titleMedium">flatten angle</div>
+		<input class="dataValue editableVal" id="angleOut"/>
+		<input id="angleSlider" class="slider" type="range"  />
+	</div>
 </div>
 <div class="materialOptions">
 	<div class="dataTitle titleMedium">connector color</div>
 	<div id="colorSet"></div>
+</div>
+<div id="selected">
+  
 </div>
 </div>
 <div class="purchase">
