--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<title>organelle bookshelf</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Electrolize' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="../jspdf/jspdf.js"></script>
+
 </head>
 <body>
 <div class="title">organelle</div>
