--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 	<div class="dataTitle titleMedium">connector color</div>
 	<div id="colorSet"></div>
 </div>
+<div>
+  <button id="saveButton">SAVE</button>
+</div>
 <div id="selected">
   
 </div>
